--- a/src/components/Form/FormSection.css
+++ b/src/components/Form/FormSection.css
@@ -7,10 +7,10 @@
 
 section {
     background-color: var(--primary-color-transparent);
-    box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.1),
+    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1),
     0 0 0 1px var(--gradient-start),
     0 0 0 2px var(--gradient-end);
-    width: 500px;
+    max-width: 500px;
     border-radius: 18px;
     padding: 36px;
     position: relative;
@@ -58,7 +58,7 @@ section {
     align-items: center;
     gap: 10px;
     flex-shrink: 0;
-    border: 0px;
+    border: 0;
     border-radius: 12px;
     background: linear-gradient(94deg, var(--gradient-start) 0%, var(--gradient-end) 126.19%);
 }
@@ -69,4 +69,20 @@ section {
 
 .item-wrapper {
     margin: 0;
+}
+
+@media (min-width: 768px) {
+    section {
+        min-width: 500px;
+    }
+}
+
+@media (max-width: 768px) {
+    section {
+        padding: 22px;
+    }
+
+    .form-container {
+        margin: 154px 10px 30px 10px;
+    }
 }
