--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -9,8 +9,40 @@ footer {
     color: var(--text-color);
 }
 
+.metamask-import-button::before {
+    content: url('../../../assets/images/metamask.svg');
+    display: inline-block;
+    margin-right: 10px;
+    padding-top: 2px;
+    vertical-align: middle;
+}
+
+.metamask-import-button {
+    margin-left: 50px;
+    padding: 6px 12px 5px 12px;
+    color: var(--text-color);
+    border: 1px;
+    border-radius: 6px;
+    background-color: var(--primary-color-transparent);
+    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1),
+    0 0 0 1px var(--gradient-start),
+    0 0 0 2px var(--gradient-end);
+    cursor: pointer;
+    outline: none;
+    font-size: 14px;
+}
+
 @media (max-width: 768px) {
     footer {
+        font-size: 13px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .metamask-import-button {
+        margin-left: 0;
+        margin-top: 10px;
         font-size: 13px;
     }
 }
